2009-07-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/lisplib.boot: Do not add bogus modemaps
	for categories.

2009-07-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/hyper/pages/*: Replace '$' by '%'.

2009-07-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix SF-2815451.
	* src/algebra/mkfunc.spad.pamphlet: mkLisp(): Convert
	integer constants to DoubleFloat.
	 
2009-07-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-opt.boot, src/interp/lisplib.boot
	src/interp/i-spec1.boot: Misc cleanups.

2009-07-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/tex.spad.pamphlet: Fix issue 245.

2009-06-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/quat.spad.pamphlet: Add general quaternions.
	src/algebra/boo-dom1.input, 
	src/algebra/exposed.lsp.pamphlet,
	src/algebra/Makefile.in: Adjust
	src/hyper/pages/QUAT2.ht: New example file
	src/hyper/pages/QUAT.ht, src/paste/Makefile.in
	src/hyper/pages/xmpexp.ht: Adjust
	src/input/quat.input.pamphlet: Remove redundant file.
	src/input/Makefile.in: Adjust.

2009-06-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-op2.boot, src/interp/format.boot:
	Fix browser error.

2009-06-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Eliminate errors compiling
	BPADICRT and PADICRAT.

2009-06-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/any.spad.pamphlet,
	src/interp/i-eval.boot: Make equality in Any more
	reasonable.

2009-06-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/tex.spad.pamphlet,
	src/algebra/mathml.spad.pamphlet,
	src/interp/i-output.boot: Fix horizontal display of
	fractions.

2009-06-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/*, src/boot/typrops.boot: Misc cleanups.

2009-06-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/algfact.spad.pamphlet: allk(): Correctly handle
	nested extensions during algebraic factorization.
