@@ -1,3 +1,7 @@
+2009-07-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/lisp/fricas-lisp.lisp: Adjust for sbcl-1.0.29.
+
 2009-07-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/lisplib.boot: Do not add bogus modemaps
